fix code block text align

--- a/css/blog.less
+++ b/css/blog.less
@@ -19,6 +19,7 @@
     .CodeRay, blockquote {
       background-color: #eee;
       padding: 40px;
+      text-align: left;
     }
     .code {
       pre {
